# LibMultiSense

./: CMakeLists.txt  MANIFEST.in  setup.py  vcpkg-configuration.json  vcpkg.json
python/: CMakeLists.txt  bindings.cc
source/: CMakeLists.txt
source/Legacy/details/: channel.cc
source/LibMultiSense/: CMakeLists.txt
source/LibMultiSense/details/: factory.cc  utilities.cc
source/LibMultiSense/details/legacy/: calibration.cc  channel.cc  configuration.cc  device_info.cc  info.cc  ip.cc  message.cc  storage.cc  udp.cc  utilities.cc
source/LibMultiSense/include/MultiSense/: MultiSenseChannel.hh  MultiSenseSerialization.hh  MultiSenseTypes.hh  MultiSenseUtilities.hh
source/LibMultiSense/test/: CMakeLists.txt  calibration_test.cc  configuration_test.cc  device_info_tests.cc  info_test.cc  message_test.cc  status_test.cc  storage_test.cc  utilities_test.cc
source/Utilities/: CMakeLists.txt
source/Utilities/Legacy/: CMakeLists.txt
source/Utilities/Legacy/DepthImageUtility/: DepthImageUtility.cc
source/Utilities/Legacy/ImageCalUtility/: ImageCalUtility.cc
source/Utilities/Legacy/PointCloudUtility/: PointCloudUtility.cc
source/Utilities/Legacy/RectifiedFocalLengthUtility/: RectifiedFocalLengthUtility.cc
source/Utilities/Legacy/SaveImageUtility/: SaveImageUtility.cc
source/Utilities/LibMultiSense/: CMakeLists.txt
source/Utilities/LibMultiSense/ColorImageUtility/: ColorImageUtility.cc  color_image_utility.py
source/Utilities/LibMultiSense/DepthImageUtility/: DepthImageUtility.cc  depth_image_utility.py
source/Utilities/LibMultiSense/DeviceInfoUtility/: CMakeLists.txt  DeviceInfoUtility.cc  device_info_utility.py
source/Wire/: CMakeLists.txt
source/Wire/test/: TestTimestamp.cc
source/python/: CMakeLists.txt  bindings.cc
(+28 files in other folders)
